# testing-emily

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: config.py  orchestrator.py
src/briefing/: generator.py
src/extractors/: base.py  fed.py  imf.py  reuters.py  yahoo.py
src/llm/: client.py  cost_tracker.py
src/models/: schemas.py
src/pipeline/: entity_recognition.py  entity_resolution.py  qa.py  sentiment.py
