[project]
name = "emily-testing"
version = "0.1.0"
description = "End-to-end financial content intelligence pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "lxml>=5.2.0",
    "playwright>=1.44.0",
]

[project.scripts]
pipeline = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
